--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>mediawiki-testwiki Application documentation (v0.0.1)</title>
+<title>README - mediawiki-testwiki Application documentation (v0.0.1)</title>
 
 <link href="./fonts.css" rel="stylesheet">
 <link href="./rdoc.css" rel="stylesheet">
@@ -36,7 +36,6 @@
   </div>
 </div>
 
-
     <div id="search-section" role="search" class="project-section initially-hidden">
   <form action="#" method="get" accept-charset="utf-8">
     <div id="search-field-wrapper">
@@ -54,6 +53,21 @@
 
   </div>
 
+  
+<div class="nav-section">
+  <h3>Table of Contents</h3>
+
+  <ul class="link-list" role="directory">
+    <li><a href="#label-mediawiki-testwiki+-+MediaWiki+test+wikis+based+on+Docker">mediawiki-testwiki - MediaWiki test wikis based on Docker</a>
+    <li><a href="#label-VERSION">VERSION</a>
+    <li><a href="#label-DESCRIPTION">DESCRIPTION</a>
+    <li><a href="#label-LINKS">LINKS</a>
+    <li><a href="#label-AUTHORS">AUTHORS</a>
+    <li><a href="#label-LICENSE+AND+COPYRIGHT">LICENSE AND COPYRIGHT</a>
+  </ul>
+</div>
+
+
   <div id="project-metadata">
     <div id="fileindex-section" class="nav-section">
   <h3>Pages</h3>
@@ -69,41 +83,10 @@
   </ul>
 </div>
 
-    <div id="classindex-section" class="nav-section">
-  <h3>Class and Module Index</h3>
-
-  <ul class="link-list">
-  
-    <li><a href="./MediaWiki.html">MediaWiki</a>
-  
-    <li><a href="./MediaWiki/TestWiki.html">MediaWiki::TestWiki</a>
-  
-    <li><a href="./MediaWiki/TestWiki/Config.html">MediaWiki::TestWiki::Config</a>
-  
-    <li><a href="./MediaWiki/TestWiki/Config/ConfigNotSetError.html">MediaWiki::TestWiki::Config::ConfigNotSetError</a>
-  
-    <li><a href="./MediaWiki/TestWiki/DockerHelper.html">MediaWiki::TestWiki::DockerHelper</a>
-  
-    <li><a href="./MediaWiki/TestWiki/DockerHelper/SilentDocker.html">MediaWiki::TestWiki::DockerHelper::SilentDocker</a>
-  
-    <li><a href="./MediaWiki/TestWiki/DockerPool.html">MediaWiki::TestWiki::DockerPool</a>
-  
-    <li><a href="./MediaWiki/TestWiki/RSpecAdapter.html">MediaWiki::TestWiki::RSpecAdapter</a>
-  
-    <li><a href="./MediaWiki/TestWiki/RSpecAdapter/Helpers.html">MediaWiki::TestWiki::RSpecAdapter::Helpers</a>
-  
-    <li><a href="./MediaWiki/TestWiki/RakeHelper.html">MediaWiki::TestWiki::RakeHelper</a>
-  
-    <li><a href="./MediaWiki/TestWiki/Version.html">MediaWiki::TestWiki::Version</a>
-  
-  </ul>
-</div>
-
   </div>
 </nav>
 
-<main role="main">
-
+<main role="main" aria-label="Page README">
 
 <h1 id="label-mediawiki-testwiki+-+MediaWiki+test+wikis+based+on+Docker">mediawiki-testwiki - <a href="MediaWiki.html">MediaWiki</a> test wikis based on Docker<span><a href="#label-mediawiki-testwiki+-+MediaWiki+test+wikis+based+on+Docker">&para;</a> <a href="#documentation">&uarr;</a></span></h1>
 
