--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@ Docker images as well as an RSpec adapter to integrate with your specs (see
 href="MediaWiki/TestWiki/RSpecAdapter.html">MediaWiki::TestWiki::RSpecAdapter</a>).</p>
 
 <h2 id="label-LINKS">LINKS<span><a href="#label-LINKS">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
-<dl class="rdoc-list note-list"><dt>Documentation
+<dl class="rdoc-list note-list"><dt>Docker images
+<dd>
+<p><a
+href="https://registry.hub.docker.com/u/blackwinter/mediawiki-testwiki">registry.hub.docker.com/u/blackwinter/mediawiki-testwiki</a></p>
+</dd><dt>Documentation
 <dd>
 <p><a
 href="https://blackwinter.github.com/mediawiki-testwiki">blackwinter.github.com/mediawiki-testwiki</a></p>
