--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>ChangeLog - mediawiki-testwiki Application documentation (v0.0.1)</title>
+<title>ChangeLog - mediawiki-testwiki Application documentation (v0.0.2)</title>
 
 <link href="./fonts.css" rel="stylesheet">
 <link href="./rdoc.css" rel="stylesheet">
@@ -59,6 +59,7 @@
 
   <ul class="link-list" role="directory">
     <li><a href="#label-Revision+history+for+mediawiki-testwiki">Revision history for mediawiki-testwiki</a>
+    <li><a href="#label-0.0.2+%5B2014-09-29%5D">0.0.2 [2014-09-29]</a>
     <li><a href="#label-0.0.1+%5B2014-09-26%5D">0.0.1 [2014-09-26]</a>
     <li><a href="#label-0.0.0+%5B2014-07-29%5D">0.0.0 [2014-07-29]</a>
   </ul>
@@ -86,6 +87,17 @@
 <main role="main" aria-label="Page ChangeLog">
 
 <h1 id="label-Revision+history+for+mediawiki-testwiki">Revision history for mediawiki-testwiki<span><a href="#label-Revision+history+for+mediawiki-testwiki">&para;</a> <a href="#documentation">&uarr;</a></span></h1>
+
+<h2 id="label-0.0.2+%5B2014-09-29%5D">0.0.2 [2014-09-29]<span><a href="#label-0.0.2+%5B2014-09-29%5D">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
+<ul><li>
+<p>Fixed <code>setup:config</code> task.</p>
+</li><li>
+<p>fixed <code>nginx.conf</code> file.</p>
+</li><li>
+<p>Fixed gem dependencies.</p>
+</li><li>
+<p>Updated <a href="README.html">README</a>.</p>
+</li></ul>
 
 <h2 id="label-0.0.1+%5B2014-09-26%5D">0.0.1 [2014-09-26]<span><a href="#label-0.0.1+%5B2014-09-26%5D">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
 <ul><li>
