--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>Table of Contents - mediawiki-testwiki Application documentation (v0.0.1)</title>
+<title>Table of Contents - mediawiki-testwiki Application documentation (v0.0.2)</title>
 
 <link href="./fonts.css" rel="stylesheet">
 <link href="./rdoc.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 
 <body id="top" class="table-of-contents">
 <main role="main">
-<h1 class="class">Table of Contents - mediawiki-testwiki Application documentation (v0.0.1)</h1>
+<h1 class="class">Table of Contents - mediawiki-testwiki Application documentation (v0.0.2)</h1>
 
 <h2 id="pages">Pages</h2>
 <ul>
@@ -39,6 +39,7 @@
 
     <ul>
       <li><a href="ChangeLog.html#label-Revision+history+for+mediawiki-testwiki">Revision history for mediawiki-testwiki</a>
+      <li><a href="ChangeLog.html#label-0.0.2+%5B2014-09-29%5D">0.0.2 [2014-09-29]</a>
       <li><a href="ChangeLog.html#label-0.0.1+%5B2014-09-26%5D">0.0.1 [2014-09-26]</a>
       <li><a href="ChangeLog.html#label-0.0.0+%5B2014-07-29%5D">0.0.0 [2014-07-29]</a>
     </ul>
